--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,26 @@
 <html>
 <head>
   <title>IExpat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <% flash.each do |name, msg| %>
+      <% if msg.is_a?(String) %>
+          <div class="alert alert-<%= name == "notice" ? "success" : "danger" %> alert-dismissable">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <%= content_tag :div, msg, :id => "flash_#{name}" %>
+          </div>
+      <% end %>
+  <% end %>
+
+
+  <%= yield %>
+</div>
 
 </body>
 </html>
