created coutries table and join table between countries and languages.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,5 +11,12 @@
  * file per style scope.
  */
  @import "bootstrap-sprockets";
+ @import "materialize";
+ @import "materialize/components/color";
  @import "bootstrap";
  @import "custom";
+
+
+ .black-text {
+  color: black;
+}
