--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -1,8 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Industries</h1>
 
-<table>
+
+
+
+<h1 class="white-text">Listing Industries</h1>
+<% if user_signed_in? %>
+  <form>
+    <legend class="white-text">Search</legend>
+    <div class='col-xs-4'>
+      <input type='text' class='form-control' value='<%= params[:keyword] %>' name='keyword' placeholder='Keyword' >
+    </div>
+  </form>
+<% end %>
+<table class="white-text">
   <thead>
     <tr>
       <th>Name</th>
